react basic components, reducer setup, store setup, axios setup cors setup